unpackaged/main/default/objects/FLAGS__CaseFlagsBusinessHours__c/FLAGS__CaseFlagsBusinessHours__c.object-meta.xml
<CustomObject>
    <description>A wrapper around the standard Business Hours object to allow Case Flags to compare the current time to the current day's Business Hours.</description>
    <label>Case Flags Business Hours</label>
    <nameField>
        <label>Case Flags Business Hours Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Flags Business Hours</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>