unpackaged/main/default/objects/FLAGS__CaseFlagsBusinessHours__c/fields/FLAGS__EndTimeHours__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__EndTimeHours__c</fullName>
    <description>The end of the business expressed as the hours since midnight.</description>
    <label>End Time Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>