unpackaged/main/default/objects/FLAGS__CaseFlagsBusinessHours__c/fields/FLAGS__Midnight__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Midnight__c</fullName>
    <description>Midnight of the current business day.</description>
    <label>Midnight</label>
    <type>DateTime</type>
</CustomField>