unpackaged/main/default/objects/FLAGS__CaseFlagsBusinessHours__c/fields/FLAGS__StartTimeHours__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__StartTimeHours__c</fullName>
    <description>The start of the business expressed as the hours since midnight.</description>
    <label>Start Time Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>