unpackaged/main/default/objects/FLAGS__CaseFlagsBusinessHours__c/fields/FLAGS__TodayEndTime__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__TodayEndTime__c</fullName>
    <description>The current day's end time as defined in the standard Business Hour record.</description>
    <label>Today End Time</label>
    <type>DateTime</type>
</CustomField>