unpackaged/main/default/objects/FLAGS__CaseFlagsBusinessHours__c/listViews/FLAGS__All.listView-meta.xml
<ListView>
    <fullName>FLAGS__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>